# openai-agents-rust

./: .env  .gitignore  AGENTS_PORTING_CHECKLIST.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SECURITY.md
examples/: gpt_oss_roundtrip.rs  vllm_roundtrip.rs
src/: agent.rs  cli.rs  error.rs  extensions.rs  guardrails.rs  handoffs.rs  lib.rs  main.rs  mcp_server.rs  memory.rs  prompts.rs  realtime.rs  results.rs  tracing.rs
src/agent/: configured.rs  mod.rs  runner.rs  runtime.rs  traits.rs  types.rs
src/client/: mod.rs  request.rs
src/config/: mod.rs  schema.rs
src/model/: gpt_oss_responses.rs  litellm.rs  mod.rs  openai_chat.rs  openai_realtime.rs
src/plugin/: loader.rs  mod.rs  traits.rs
src/tools/: function.rs  mod.rs  registry.rs  traits.rs
src/utils/: env.rs  mod.rs
src/voice/: mod.rs
