[package]
name = "openai-agents-rust"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Harmony-aligned, OpenAI-compatible agent orchestration in Rust with tools, realtime, and voice."
repository = "https://github.com/MaxParisotto/openai-agents-rust"
homepage = "https://github.com/MaxParisotto/openai-agents-rust"
documentation = "https://docs.rs/openai-agents-rust"
readme = "README.md"
keywords = ["openai", "agents", "llm", "ai", "tools"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE", "DESIGN.md"]

[dependencies]
hyper = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.143"
rust-yaml = "0.0.5"
config = "0.15.14"
clap = { version = "4.5.8", features = ["derive"] }
thiserror = "2.0.16"
log = "0.4.22"
env_logger = "0.11.5"
reqwest = { version = "0.12.5", features = [
    "json",
    "rustls-tls",
    "stream",
    "multipart",
] }
libloading = "0.8.3"
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["json", "ws", "macros", "http1"] }
tower = "0.5.2"
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
dirs = "6.0.0"
dotenvy = "0.15"
bytes = "1"
